--- a/Movie_Recomendation_Structured_with_options.ipynb
+++ b/Movie_Recomendation_Structured_with_options.ipynb
@@ -108,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0WhhCLT6SYwK",
-        "outputId": "72418d09-b633-4405-961c-33dfb13c9b69"
+        "outputId": "3dd72fff-f090-411f-be03-922e93b03349"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,9 +118,9 @@
           "text": [
             "/bin/bash: line 1: https://github.com/Nikeshkumar04/Project.git: No such file or directory\n",
             "=== Welcome to the Movie Recommendation System, buddy! ===\n",
-            "What's your name? Nikesh\n",
+            "What's your name? Nikeshkumar\n",
             "\n",
-            "Hey Nikesh, Let me suggest some  great movies for you \n",
+            "Hey Nikeshkumar, Let me suggest some  great movies for you \n",
             "\n",
             "\n",
             "What would you like to do?\n",
