--- a/Movie_Recomendation_Structured_with_options.ipynb
+++ b/Movie_Recomendation_Structured_with_options.ipynb
@@ -108,20 +108,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0WhhCLT6SYwK",
-        "outputId": "3dd72fff-f090-411f-be03-922e93b03349"
+        "outputId": "1485beaf-ae47-4bc2-a8df-ae930f4ab88d"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/bin/bash: line 1: https://github.com/Nikeshkumar04/Project.git: No such file or directory\n",
             "=== Welcome to the Movie Recommendation System, buddy! ===\n",
-            "What's your name? Nikeshkumar\n",
+            "What's your name? Nikesh\n",
             "\n",
-            "Hey Nikeshkumar, Let me suggest some  great movies for you \n",
+            "Hey Nikesh, Let me suggest some  great movies for you \n",
             "\n",
+            "\n",
+            "What would you like to do?\n",
+            "1. Browse all genres\n",
+            "2. Get movie recommendations\n",
+            "3. Exit\n",
+            "Enter your choice (1/2/3): 1\n",
+            " Available genres:\n",
+            "\n",
+            " - Action\n",
+            " - Adventure\n",
+            " - Animation\n",
+            " - Biography\n",
+            " - Comedy\n",
+            " - Crime\n",
+            " - Drama\n",
+            " - Family\n",
+            " - Fantasy\n",
+            " - Film-Noir\n",
+            " - History\n",
+            " - Horror\n",
+            " - Music\n",
+            " - Musical\n",
+            " - Mystery\n",
+            " - Romance\n",
+            " - Sci-Fi\n",
+            " - Sport\n",
+            " - Thriller\n",
+            " - War\n",
+            " - Western\n",
+            "\n",
+            "\n",
+            "What would you like to do?\n",
+            "1. Browse all genres\n",
+            "2. Get movie recommendations\n",
+            "3. Exit\n",
+            "Enter your choice (1/2/3): 2\n",
+            "What's a genre you're in the mood for? Action\n",
+            "\n",
+            " Check out these top Action movies:\n",
+            "\n",
+            "1. The Dark Knight\n",
+            "2. The Lord of the Rings: The Return of the King\n",
+            "3. Inception\n",
+            "4. The Lord of the Rings: The Fellowship of the Ring\n",
+            "5. The Lord of the Rings: The Two Towers\n",
+            "6. The Matrix\n",
+            "7. Star Wars: Episode V - The Empire Strikes Back\n",
+            "8. Star Wars\n",
+            "9. Seppuku\n",
+            "10. Shichinin no samurai\n",
             "\n",
             "What would you like to do?\n",
             "1. Browse all genres\n",
