--- a/Chat_Style_Movie_recommendation_System.ipynb
+++ b/Chat_Style_Movie_recommendation_System.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8N8PVyXX0GryymPalFZaL",
+      "authorship_tag": "ABX9TyPy4w6ekSzoxSum/AVDR0gf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -143,7 +143,7 @@
         "            suggest_movies(genre_map, genre)\n",
         "\n",
         "        elif choice == '3':\n",
-        "            print(\"\\n🍿 That’s all from me! Hope you find something amazing to watch. See you soon!\")\n",
+        "            print(\"\\n🍿 That’s all from me! Hope you found something amazing to watch. See you soon!\")\n",
         "            break\n",
         "\n",
         "        else:\n",
